src/orgs/usa/data-model/objects/ReferralSource__c/ReferralSource__c.object-meta.xml
<CustomObject>
    <label>Referral Source</label>
    <nameField>
        <displayFormat>RFS-{0000}</displayFormat>
        <label>Referral Source #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>