src/orgs/usa/data-model/objects/ReferralSource__c/fields/EmrServerReferralSourceMetadata__c.field-meta.xml
<CustomField>
    <fullName>EmrServerReferralSourceMetadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMR Server Referral Source Metadata</label>
    <referenceTo>EmrServerReferralSourceMetadata__c</referenceTo>
    <relationshipLabel>EMR Server Metadata Referral Sources</relationshipLabel>
    <relationshipName>ReferralSources</relationshipName>
    <type>Lookup</type>
</CustomField>