src/orgs/usa/data-model/objects/ReferralSource__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Referral Sources</relationshipLabel>
    <relationshipName>LeadReferralSources</relationshipName>
    <type>Lookup</type>
</CustomField>