src/orgs/usa/data-model/objects/ReferralSource__c/fields/OverwrittenReferralCategory__c.field-meta.xml
<CustomField>
    <fullName>OverwrittenReferralCategory__c</fullName>
    <description>Should only be populated when NOT linking the referral source to a EmrServerReferralSourceMetadata__c record.
Works alongside the &quot;Provider&quot; lookup field.</description>
    <label>Overwritten Referral Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor_OBGYN</fullName>
            </value>
            <value>
                <fullName>Doctor_Non OBGYN</fullName>
            </value>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>