src/orgs/usa/data-model/objects/ReferralSource__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure to select an Account of type Patient.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Referral Sources</relationshipLabel>
    <relationshipName>PatientReferralSources</relationshipName>
    <type>Lookup</type>
</CustomField>