src/orgs/usa/data-model/objects/ReferralSource__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Should only be populated when NOT linking the referral source to a EmrServerReferralSourceMetadata__c record.</description>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Referring Sources</relationshipLabel>
    <relationshipName>ProviderReferringSources</relationshipName>
    <type>Lookup</type>
</CustomField>