src/orgs/usa/data-model/objects/ReferralSource__c/fields/ReferralCategory__c.field-meta.xml
<CustomField>
    <fullName>ReferralCategory__c</fullName>
    <formula>IF(
    ISBLANK(EmrServerReferralSourceMetadata__c),
				TEXT(OverwrittenReferralCategory__c),
				EmrServerReferralSourceMetadata__r.ReferralCategory__c
)</formula>
    <label>Referral Category</label>
    <type>Text</type>
</CustomField>