src/orgs/usa/data-model/objects/ReferralSource__c/fields/ReferredBy__c.field-meta.xml
<CustomField>
    <fullName>ReferredBy__c</fullName>
    <formula>IF(
    ISBLANK(EmrServerReferralSourceMetadata__c),
				HYPERLINK(&apos;/&apos; + Provider__c, TRIM(Provider__r.FirstName + &apos; &apos; + Provider__r.LastName), &apos;_parent&apos;),
				EmrServerReferralSourceMetadata__r.ReferredBy__c
)</formula>
    <label>Referred By</label>
    <type>Text</type>
</CustomField>