src/orgs/usa/data-model/objects/ReferralSource__c/validationRules/PreventLeavingLeadOrPatientEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventLeavingLeadOrPatientEmpty</fullName>
    <active>true</active>
    <description>Prevent having this Referral Source not linked to a any Lead or Patient.</description>
    <errorConditionFormula>AND(
    ISBLANK(Lead__c),
				ISBLANK(Patient__c)
)</errorConditionFormula>
    <errorMessage>A Referral Source must either be linked to a Patient or a Lead.</errorMessage>
</ValidationRule>